--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Index</h3>
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
-
+            <p><button id="pine">Pine</button></p>
         </div>
         <div class="content">
             <iframe id="i_content" src="oak_content.html"
@@ -36,7 +36,6 @@
             <iframe  id="i_summary" src="oak_summary.html">
             </iframe>
         </div>
-
     </div>
 
 
@@ -50,7 +49,13 @@
             $("#i_summary").attr("src","oak_summary.html");
         })
         $("#beech").click(function(){
+            $("#i_content").attr("src","beech_content.html");
+            $("#i_summary").attr("src","beech_summary.html");
 
+        })
+        $("#pine").click(function(){
+            $("#i_content").attr("src","pine_content.html");
+            $("#i_summary").attr("src","pine_summary.html");
 
         })
 
