--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <p><button id="oak">Oak</button></p>
             <p><button id="beech">Beech</button></p>
             <p><button id="pine">Pine</button></p>
+            <p><button id="sequoia">Sequoia</button></p>
         </div>
         <div class="content">
             <iframe id="i_content" src="oak_content.html"
@@ -56,6 +57,11 @@
         $("#pine").click(function(){
             $("#i_content").attr("src","pine_content.html");
             $("#i_summary").attr("src","pine_summary.html");
+
+        })
+        $("#sequoia").click(function(){
+            $("#i_content").attr("src","sequoia_content.html");
+            $("#i_summary").attr("src","sequoia_summary.html");
 
         })
 
